# naucse.python.cz

./: .gitignore  .gitmodules  .travis.yml  02.md  05.md  07.md  08.md  10.md  CNAME  LICENSE.MIT  Pipfile  README.md  classes.ipynb  classes.slides.html  course.html  courses.yml  index.html  poznamky.txt  pyproject.toml  pytest.ini  requirements.txt  site.py  test_requirements.txt  wikiskoleni.url
2017/: index.html
2018/: index.html
2019/: index.html
2020/: index.html
2021/: index.html
2022/: index.html
2023/: index.html
2024/: index.html
2025/: index.html
2026/: index.html
courses/: courses.yml  index.html  info.yml
css/: pyladies.css  reveal-theme.css  reveal-theme.scss
helper-handout/: helpers.tex
js/: solutions.js  start_reveal.js
lessons/: index.html
naucse/: __init__.py  __main__.py  arca_renderer.py  cli.py  converters.py  edit_info.py  filters.py  freezer.py  htmlparser.py  logger.py  markdown_util.py  metamodel.py  models.py  modelutils.py  notebook_util.py  render.py  routes.py  sanitize.py  templates.py  urlconverters.py  utils.py  validation.py  views.py
naucse_render/: __init__.py  course.py  info.py  lesson.py  load.py  markdown.py  notebook.py  page.py  templates.py
notes/: 01.md  03.md  04.md  06.md  09.md
photos/: prvnisraz.xcf
runs/: index.html  runs.yml
s001-install/: cmdline.html  index.html  instalace.html  uvod.html
s002-hello-world/: and-or.html  comparisons.html  editor.html  hello-world.html  index.html  printing.html  variables.html
s003-looping/: functions.html  index.html  poznamky.txt  turtle.html
(+13157 files in other folders)
